Accidental Death text

--- a/WebUI/Pages/User/Index.cshtml
+++ b/WebUI/Pages/User/Index.cshtml
@@ -22,8 +22,8 @@
         {
             <tr>
                 <td>@user.Id</td>
-                <td>@user.Login</td>
-                <td>@user.Password</td>
+                @* <td>@user.Login</td> *@
+                @* <td>@user.Password</td> *@
                 <td>@user.Tasks</td>
                 <td>@user.Folders></td>
             </tr>
