--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-
+    <partial name="_LoginPartial"/>
 </header>
 <div class="container">
     <main role="main" class="pb-3">
