Databse fixed and folder entrypoint created

--- a/WebUI/Views/Test/Index.cshtml
+++ b/WebUI/Views/Test/Index.cshtml
@@ -12,7 +12,8 @@
 </head>
 <body>
 <div>
-      <partial name="_TestPartial" />
+    <partial name="_TestPartial" />
+    sdfsdf
 </div>
 </body>
 </html>
