--- a/WebUI/Views/Task/Remove.cshtml
+++ b/WebUI/Views/Task/Remove.cshtml
@@ -5,6 +5,89 @@
     Layout = "_Layout";
 }
 
+<style>
+    h2 {
+        color: #333;
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+
+    p {
+        color: #666;
+        margin-bottom: 20px;
+    }
+
+    h4 {
+        color: #333;
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+
+    hr {
+        border-color: #ccc;
+        margin-top: 10px;
+        margin-bottom: 20px;
+    }
+
+    dl {
+        margin-bottom: 20px;
+    }
+
+    dt {
+        color: #666;
+        font-weight: bold;
+    }
+
+    dd {
+        color: #333;
+        margin-left: 0;
+        margin-bottom: 10px;
+    }
+
+    .form-group {
+        margin-bottom: 20px;
+    }
+
+    .col-md-offset-2 {
+        margin-left: 16.66666667%;
+    }
+
+    .col-md-10 {
+        width: 83.33333333%;
+    }
+
+    .btn {
+        display: inline-block;
+        padding: 10px 20px;
+        font-size: 16px;
+        font-weight: bold;
+        text-decoration: none;
+        background-color: #dc3545;
+        color: #fff;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+    }
+
+    .btn:hover {
+        background-color: #c82333;
+    }
+
+    .btn-danger {
+        background-color: #dc3545;
+        border-color: #dc3545;
+    }
+
+    .btn-danger:hover {
+        background-color: #c82333;
+        border-color: #c82333;
+    }
+
+    .btn-danger:focus {
+        outline: none;
+        box-shadow: none;
+    }
+</style>
+
 <h2>Delete Task</h2>
 
 <p>Are you sure you want to delete the following task?</p>
