--- a/WebUI/Views/Shared/_LoginPartial.cshtml
+++ b/WebUI/Views/Shared/_LoginPartial.cshtml
@@ -8,12 +8,19 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
+    <div class="header"></div>
+    <span class="to_do_list_label">Todolist</span>
+    
+<li class="nav-item">
+    <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+        <span class="user">User: @User.Identity.Name
+        </span>
+    </a>
+</li>
+
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Logged as: @User.Identity.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+        <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+            <button type="submit" class="nav-link btn btn-link text-dark"><span class="log_out">Logout</span></button>
         </form>
     </li>
 }
