--- a/WebUI/wwwroot/css/site.css
+++ b/WebUI/wwwroot/css/site.css
@@ -29,3 +29,178 @@ body {
 .inputs {
   
 }
+
+/* ++ */
+.header {
+  width: 100%;
+  height: 102px;
+  background: rgba(176,191,222,1);
+  opacity: 1;
+  position: relative;
+  top: 0px;
+  left: 0px;
+  overflow: hidden;
+}
+.to_do_list_label {
+  color: rgba(4,12,28,1);
+  position: absolute;
+  top: 25px;
+  left: 38px;
+  font-weight: Regular;
+  font-size: 32px;
+  opacity: 1;
+  text-align: left;
+}
+.user {
+  color: rgba(64,107,191,1);
+  position: absolute;
+  top: 23px;
+  left: 1146px;
+  font-weight: Regular;
+  font-size: 16px;
+  opacity: 1;
+  text-align: center;
+}
+.log_out {
+  width: 154px;
+  color: rgba(64,107,191,1);
+  position: absolute;
+  top: 50px;
+  left: 1348px;
+  font-weight: Regular;
+  font-size: 16px;
+  opacity: 1;
+  text-align: left;
+}
+
+.task_type_1 {
+  display: flex;
+  width: 1325px;
+  height: 79px;
+  opacity: 1;
+  position: relative;
+  top: 171px;
+  left: 38px;
+  overflow: hidden;
+}
+.task_1_background {
+  width: 1325px;
+  height: 79px;
+  background: rgba(251,217,192,1);
+  opacity: 1;
+  position: relative;
+  top: 0px;
+  left: 0px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  overflow: hidden;
+}
+.task_name {
+  width: 133px;
+  color: rgba(38,64,115,1);
+  position: relative;
+  top: 24px;
+  left: 111px;
+  font-family: Comfortaa;
+  font-weight: SemiBold;
+  font-size: 20px;
+  opacity: 1;
+  text-align: center;
+}
+.task_desc {
+  width: 244px;
+  color: rgba(38,64,115,1);
+  position: relative;
+  top: 24px;
+  left: 402px;
+  font-family: Comfortaa;
+  font-weight: Regular;
+  font-size: 20px;
+  opacity: 1;
+  text-align: left;
+}
+.task_tag {
+  width: 94px;
+  color: rgba(38,64,115,1);
+  position: relative;
+  top: 24px;
+  left: 828px;
+  font-family: Comfortaa;
+  font-weight: Regular;
+  font-size: 20px;
+  opacity: 1;
+  text-align: left;
+}
+.task_time {
+  width: 64px;
+  color: rgba(38,64,115,1);
+  left: 1111px;
+  font-family: Comfortaa;
+  font-weight: Regular;
+  font-size: 20px;
+  opacity: 1;
+  text-align: left;
+}
+.task_delete {
+  width: 40px;
+  height: 41px;
+  background: url("../images/delete.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: relative;
+  top: 16px;
+  left: 1250px;
+  overflow: hidden;
+}
+.task_1_undone {
+  width: 35px;
+  height: 32px;
+  background: url("../images/done.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: relative;
+  top: 20px;
+  left: 36px;
+  border: 2px solid rgba(38,64,115,1);
+  overflow: hidden;
+}
+.create {
+  width: 68px;
+  height: 63px;
+  background: url("../images/v734_78.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  bottom: 50px;
+  left: 1261px;
+  overflow: hidden;
+}
+.create_background {
+  width: 68px;
+  height: 63px;
+  background: rgba(64,107,191,1);
+  opacity: 1;
+  position: relative;
+  top: 0px;
+  left: 0px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  overflow: hidden;
+}
+.create_icon {
+  color: rgba(255,255,255,1);
+  font-size: 40px;
+  opacity: 1;
+  position: relative;
+  text-align: center;
+}
